@@ -4619,8 +4619,10 @@ static int ntfs_non_resident_attr_expand(ntfs_attr *na, const s64 newsize)
 	runlist *rl, *rln;
 	int err;
 
-	ntfs_log_trace("Entering for inode 0x%llx, attr 0x%x.\n", (unsigned long
-			long)na->ni->mft_no, na->type);
+	ntfs_log_trace("Entering for inode 0x%llx, attr 0x%x, new size %lld, "
+			"current size %lld.\n",
+			(unsigned long long)na->ni->mft_no, na->type,
+			(long long)newsize, (long long)na->data_size);
 
 	vol = na->ni->vol;
 
@@ -4761,24 +4763,26 @@ static int ntfs_non_resident_attr_expand(ntfs_attr *na, const s64 newsize)
 	}
 	a = ctx->attr;
 
-	/* Update allocated size only if it is changed. */
+	/* Update allocated and compressed size only if we changed runlist. */
 	if ((na->allocated_size >> vol->cluster_size_bits) < first_free_vcn) {
 		na->allocated_size = first_free_vcn << vol->cluster_size_bits;
 		a->allocated_size = cpu_to_sle64(na->allocated_size);
-	}
 
-	/* Update compressed_size if present. */
-	if (NAttrSparse(na) || NAttrCompressed(na)) {
-		s64 new_compr_size;
+		/* Update compressed_size if present. */
+		if (NAttrSparse(na) || NAttrCompressed(na)) {
+			s64 new_compr_size;
 
-		new_compr_size = ntfs_rl_get_compressed_size(vol, na->rl);
-		if (new_compr_size == -1) {
-			err = errno;
-			ntfs_log_trace("BUG! Leaving inconstant metadata.\n");
-			goto put_err_out;
+			new_compr_size = ntfs_rl_get_compressed_size(vol,
+					na->rl);
+			if (new_compr_size == -1) {
+				err = errno;
+				ntfs_log_trace("BUG! Leaving inconstant "
+						"metadata.\n");
+				goto put_err_out;
+			}
+			na->compressed_size = new_compr_size;
+			a->compressed_size = cpu_to_sle64(new_compr_size);
 		}
-		na->compressed_size = new_compr_size;
-		a->compressed_size = cpu_to_sle64(new_compr_size);
 	}
 
 	/* Update data size. */
